{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 71,
  "lineage": "6407db21-47ce-0c37-79e1-9ed06a2ea3ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apigw_vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:security-group/sg-0456699023093f397",
            "description": "Security group that protects API Gateway VPC link ENIs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0456699023093f397",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nequi-franchises-dev-apigw-link-sg",
            "name_prefix": "",
            "owner_id": "698322417763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nequi-franchises-dev-apigw-link-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nequi-franchises-dev-apigw-link-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:security-group/sg-0f51567f89ace4a69",
            "description": "Security group for ECS service nequi-franchises-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f51567f89ace4a69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from security group sg-052b2f767aed8dd2c",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052b2f767aed8dd2c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nequi-franchises-dev-svc-sg",
            "name_prefix": "",
            "owner_id": "698322417763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-svc-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-svc-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from security group sg-052b2f767aed8dd2c",
            "from_port": 8080,
            "id": "sgrule-1500070255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f51567f89ace4a69",
            "security_group_rule_id": "sgr-06a67cb87136b2bd0",
            "self": false,
            "source_security_group_id": "sg-052b2f767aed8dd2c",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_service.aws_security_group.service",
            "module.load_balancer.aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698322417763:loadbalancer/app/nequi-franchises-dev-service-alb/c52c580b62b601d6",
            "arn_suffix": "app/nequi-franchises-dev-service-alb/c52c580b62b601d6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-nequi-franchises-dev-service-alb-562362914.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:698322417763:loadbalancer/app/nequi-franchises-dev-service-alb/c52c580b62b601d6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nequi-franchises-dev-service-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-052b2f767aed8dd2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050f795035024bf43"
              },
              {
                "subnet_id": "subnet-056024e13649d8383"
              }
            ],
            "subnets": [
              "subnet-050f795035024bf43",
              "subnet-056024e13649d8383"
            ],
            "tags": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-alb",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-alb",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "vpc_id": "vpc-036e32cd547628da6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698322417763:listener/app/nequi-franchises-dev-service-alb/c52c580b62b601d6/a416ef9924455202",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:698322417763:targetgroup/nequi-franchises-dev-service-tg/bd8c5e1d1b6f5282",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698322417763:listener/app/nequi-franchises-dev-service-alb/c52c580b62b601d6/a416ef9924455202",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:698322417763:loadbalancer/app/nequi-franchises-dev-service-alb/c52c580b62b601d6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.this",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.aws_security_group.alb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698322417763:targetgroup/nequi-franchises-dev-service-tg/bd8c5e1d1b6f5282",
            "arn_suffix": "targetgroup/nequi-franchises-dev-service-tg/bd8c5e1d1b6f5282",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698322417763:targetgroup/nequi-franchises-dev-service-tg/bd8c5e1d1b6f5282",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:698322417763:loadbalancer/app/nequi-franchises-dev-service-alb/c52c580b62b601d6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nequi-franchises-dev-service-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-tg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-tg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:security-group/sg-052b2f767aed8dd2c",
            "description": "Security group for nequi-franchises-dev-service internal load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052b2f767aed8dd2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow listener traffic from 10.0.0.0/16",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nequi-franchises-dev-service-alb-sg",
            "name_prefix": "",
            "owner_id": "698322417763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-alb-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev-service",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-service-alb-sg",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/16",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow listener traffic from 10.0.0.0/16",
            "from_port": 80,
            "id": "sgrule-204176985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b2f767aed8dd2c",
            "security_group_rule_id": "sgr-0ff3b6f644320d945",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d08a2fe0e87f738",
            "arn": "arn:aws:ec2:us-east-1:698322417763:elastic-ip/eipalloc-02d08a2fe0e87f738",
            "association_id": "eipassoc-0ea828cd1ce08e7b3",
            "domain": "vpc",
            "id": "eipalloc-02d08a2fe0e87f738",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c81e2bb4b1789a2",
            "private_dns": "ip-10-0-0-94.ec2.internal",
            "private_ip": "10.0.0.94",
            "public_dns": "ec2-34-235-238-30.compute-1.amazonaws.com",
            "public_ip": "34.235.238.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-nat-eip-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-nat-eip-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:internet-gateway/igw-0922cfc97fa00cdcd",
            "id": "igw-0922cfc97fa00cdcd",
            "owner_id": "698322417763",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-igw",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-igw",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d08a2fe0e87f738",
            "association_id": "eipassoc-0ea828cd1ce08e7b3",
            "connectivity_type": "public",
            "id": "nat-051c68429ff2b6b22",
            "network_interface_id": "eni-03c81e2bb4b1789a2",
            "private_ip": "10.0.0.94",
            "public_ip": "34.235.238.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0784dbd824bb7d1e1",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-nat-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-nat-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6e01163733c64b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-051c68429ff2b6b22",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6e01163733c64b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f1eb073c8b581b891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-051c68429ff2b6b22",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1eb073c8b581b89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0922cfc97fa00cdcd",
            "id": "r-rtb-0782ee1e3728857221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0782ee1e372885722",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:route-table/rtb-0b6e01163733c64b2",
            "id": "rtb-0b6e01163733c64b2",
            "owner_id": "698322417763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051c68429ff2b6b22",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-rt-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-rt-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:route-table/rtb-0f1eb073c8b581b89",
            "id": "rtb-0f1eb073c8b581b89",
            "owner_id": "698322417763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051c68429ff2b6b22",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-rt-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-rt-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:route-table/rtb-0782ee1e372885722",
            "id": "rtb-0782ee1e372885722",
            "owner_id": "698322417763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0922cfc97fa00cdcd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-rt",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-rt",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260d356158107f6d",
            "route_table_id": "rtb-0b6e01163733c64b2",
            "subnet_id": "subnet-056024e13649d8383"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b49c547e05aa9dd9",
            "route_table_id": "rtb-0f1eb073c8b581b89",
            "subnet_id": "subnet-050f795035024bf43"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0be0b004e2072d",
            "route_table_id": "rtb-0782ee1e372885722",
            "subnet_id": "subnet-0784dbd824bb7d1e1"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017123361ebab0734",
            "route_table_id": "rtb-0782ee1e372885722",
            "subnet_id": "subnet-03bd99d5b583efed5"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:subnet/subnet-056024e13649d8383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056024e13649d8383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698322417763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:subnet/subnet-050f795035024bf43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f795035024bf43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698322417763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-private-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:subnet/subnet-0784dbd824bb7d1e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0784dbd824bb7d1e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698322417763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-0",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:subnet/subnet-03bd99d5b583efed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bd99d5b583efed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698322417763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-public-1",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-036e32cd547628da6"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698322417763:vpc/vpc-036e32cd547628da6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092db99c537e68cd7",
            "default_route_table_id": "rtb-07355644a0aea9863",
            "default_security_group_id": "sg-00e600f019492b391",
            "dhcp_options_id": "dopt-0dfccbe3793ffb946",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036e32cd547628da6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07355644a0aea9863",
            "owner_id": "698322417763",
            "tags": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-vpc",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "nequi-franchises-dev",
              "Environment": "dev",
              "Name": "nequi-franchises-dev-vpc",
              "Owner": "platform-team",
              "Project": "nequi-franchises",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}